--- a/style.css
+++ b/style.css
@@ -44,6 +44,8 @@ body {
     font-weight: bolder;
     color: white;
     background-color: rgb(10, 55, 107);
+    cursor: -webkit-grab;
+    cursor: grab;
 }
 
 .computer {
@@ -61,6 +63,8 @@ body {
     width: 65%;
     height: 65%;
     display: flex;
+    flex-direction: column;
+    gap: 10px;
     align-items: center;
     justify-content: center;
 }
@@ -83,10 +87,31 @@ body {
     gap: 20px;
 }
 
-.result-placeholder {
+.result-box, .final-result-box {
     border-style: solid;
     border-color: white;
     border-radius: 20px;
     height: 80%;
     width: 136px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 35px;
+}
+
+.final-result-box{
+    font-size: 70px;
+    color: white;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.play-again-text {
+    font-size: 25px;
+    font-weight: "bolder";
+    color: red;
+    cursor: -webkit-grab;
+    cursor: grab;
 }
